# kindle-mdns

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
extensions/kindle-mdns/: config.xml  menu.json
src/: main.rs
